syntax = "proto3";

option java_package = "com.example.sample.grpc.validate-order-svc";

message CustomerOutput {
  string id = 1;
  string name = 2;
  string status = 3;
  string processedAt = 4;
}

message ValidationOutput {
  string id = 5;
  bool isValid = 6;
}

service ProcessValidateOrderService {
  rpc remoteProcess(CustomerOutput) returns (ValidationOutput);
}